# l9-ci-sdk

./: .coderabbit.yaml  .gitignore  AGENT.md  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.md  README.md  SECURITY.md  TODO.md  VALIDATION_REPORT.json  constraints.txt  prompt_versions.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/: CODEOWNERS
.github/governance/: README.md  execution-profiles.yaml  rule-modes.selfci.yaml  rule-modes.yaml
.github/workflows/: ci.yml  l9-analysis-merge.yml  l9-analysis-nightly.yml  l9-analysis-release.yml  l9-analysis-supply-chain.yml  l9-analysis.yml  l9-self-ci.yml  l9-wiring-check.yml  pr-checks.yml  pr-repair.yml  publish.yml  self-test.yml
.l9/: architecture.yaml  audit-findings.md  compatibility.yaml  integration-contract.yaml  ownership.yaml  public-api.yaml  release-policy.yaml  roadmap.yaml  semgrep-identity-map.yaml  semgrep-policy.example.yaml  semgrep-remediation-map.example.yaml  tool-stack.yaml
docs/: PUBLISHING.md
docs/adr/: 0001-canonical-evidence-and-findings.md  0002-policy-independent-normalization.md  0003-explicit-rule-identity.md  0004-versioned-artifact-protocol.md  0005-provider-spi.md  0006-gate-evaluation.md  0007-repository-snapshot-identity.md  0008-agent-payload-is-a-projection.md
docs/architecture/: README.md  agent-review-payload.md  artifact-protocol.md  capability-detection.md  cli-contract.md  core-integration.md  deterministic-serialization.md  execution-profiles.md  gate-evaluation.md  operational-controls.md  provider-spi.md  public-api.md  redaction-contract.md  repository-snapshots.md  semgrep-provider.md  validation-contract.md  version-negotiation.md
docs/ci-enablement/: CHANGE_SUMMARY.md  MANIFEST.md  RUNBOOK.md  VALIDATION.md
docs/compatibility/: README.md
docs/examples/: core-semgrep-integration.sh  core-semgrep-workflow-fragment.yml
docs/migration/: legacy-normalizer-to-sdk.md
docs/release/: blocker-closure.md  checklist.md  known-limitations.md
docs/source/: phase-4.md  sdk-spec.md
evals/golden_sets/: clean_diff.json  transport_violation.json
evals/rubrics/: code_review.md
l9_ci/: __init__.py  __main__.py  cli.py
l9_ci/agent_payload/: __init__.py  render.py  schema.py
l9_ci/artifacts/: __init__.py  compatibility.py  serializer.py  validator.py
l9_ci/baseline/: __init__.py  comparator.py  comparison.py  fingerprint.py  ledger.py  packet_envelope.py  pytest_adapter.py  schemas.py
l9_ci/bootstrap/: new_repo.py
l9_ci/capabilities/: __init__.py  detector.py  model.py
l9_ci/cli/: __init__.py  diagnostics.py  exit_codes.py  output.py
l9_ci/commands/: __init__.py  artifacts.py  baseline.py  errors.py  gates.py  integration.py  providers.py  semgrep.py
l9_ci/contracts/: __init__.py  bundle.py  classification.py  coverage.py  evidence.py  failure.py  finding.py  source.py  version.py
prompts/: code_review_system.md
scripts/: generate_validation_report.py
tests/: test_agent_payload.py  test_agent_payload_contract.py  test_bootstrap.py  test_ci_gate.py  test_deprecated_api.py  test_file_enumerator.py  test_governance_and_cli.py  test_governance_approval.py  test_l9_wiring.py  test_packet_envelope.py  test_pipeline_runner.py  test_review_audit.py  test_review_evals.py  test_review_llm.py  test_rule_modes.py  test_thresholds.py
(+129 files in other folders)
