[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "l9-ci"
version = "1.0.0"
description = "Universal L9 CI compliance scanners, governance checks, and CI gate evaluator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
ci = [
  "ruff>=0.15.0,<1.0.0",
  "mypy>=1.14.0,<3.0.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.8.0",
  "pytest-timeout>=2.4.0",
  "bandit>=1.9.0",
  "pip-audit>=2.9.0",
  "safety>=3.0.0",
  "pip-licenses>=4.0.0",
]

[project.scripts]
l9-ci = "l9_ci.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "A", "C4", "TCH", "ARG", "PTH", "PL", "TRY", "RUF"]
ignore = ["E501", "TRY003", "PLR0913"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
